--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <style>
   body {
-  padding-top: 80px;
+  padding-top: 20px;
   text-align: center;
   font-family: monaco, monospace;
   background-size: cover;
@@ -17,7 +17,7 @@ h2 {
   font-size: 20px;
 }
 #content {
-  background-color:red;
+  background-color:Turquoise;
 }
 #nav {
   background-color:purple;
@@ -38,35 +38,27 @@ p{
 </style>
 <html>
   <head>
-    <title>A Tale Of Embers </title>
   </head>
   
   <body>
     <div id-"container"> </div>
         <div id="header"></div>
-        <h1> My Website</h1>
+        <h1> A Tale Of Embers</h1>
   
     <div id="content">
       <div id="nav"> 
       <h3> Navigation
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
-      </ul>
-      </h3>
-      </div>
+        <li>Home | About the book | About the author
+        </div>
       <div id="main">
       <h2>Home Page</h2>
       <p>This story is about a red dragonling named Ember, on a journey across her land ot the glow lagoon she heard about from a goods trader. The trader tells her of the mountain of soles, the fog horn sea, and the desert of despair. 
-Ember trucks across the mountain, in the process she sprains her wing and is forced to walk, sales across the sea and slowly trudges across the desert of despair. Along the way she makes many friends, some of which, she stays with to this day.
+Ember trucks across the mountain, in the process she sprains her wing and forceing her to walk, she sales across the sea and slowly trudges across the desert of despair. Along the way she makes many friends, some of which, she stays with to this day.
   </p>
      <img id="dragon1" src="http://i350.photobucket.com/albums/q427/60029/IMGA08241_zpsuifuxyqo.jpg">
-      <p><a href=http://www.uww.edu>Click Here</a></p>
-      <p> About the Author
-      </p>
-    </div>
-   
+      <p> About the Author: </p>
+   <p> Hello there, i’m Annika Little, I live in wisconsin. I write short stories in my spare time, like this book. I also have two cats, one dog and one turtle. I like to play video games, read, and watch movies in my spare time.<p>
     <div id="footer"></div>
     </div>
   </body>
