--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p{
       <div id="nav"> 
       <h3> Navigation
       <ul>
-        <li>Home | About the book | About the author
+        <li>Home | About the book | About the author | <a href="index2.html" title="second page">Second page</a>
         </div>
       <div id="main">
       <h2>Home Page</h2>
