--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@ p{
       <div id="nav"> 
       <h3> Navigation
       <ul>
-        <li>Home | About the book | About the author | <a href="index2.html" title="second page">Second page</a>
+        <li>Home | About the book | About the author | 
         </div>
       <div id="main">
       <h2>Home Page</h2>
       <p>This story is about a red dragonling named Ember, on a journey across her land ot the glow lagoon she heard about from a goods trader. The trader tells her of the mountain of soles, the fog horn sea, and the desert of despair. 
 Ember trucks across the mountain, in the process she sprains her wing and forceing her to walk, she sales across the sea and slowly trudges across the desert of despair. Along the way she makes many friends, some of which, she stays with to this day.
+       <br><a href="index2.html" title="second page">Second page</a>
   </p>
      <img id="dragon1" src="http://i350.photobucket.com/albums/q427/60029/IMGA08241_zpsuifuxyqo.jpg">
       <p> About the Author: </p>
