--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Ember trucks across the mountain, in the process she sprains her wing and forcei
   </p>
      <img id="dragon1" src="http://i350.photobucket.com/albums/q427/60029/IMGA08241_zpsuifuxyqo.jpg">
       <p> About the Author: </p>
-   <p> Hello there, i’m Annika Little, I live in wisconsin. I write short stories in my spare time, like this book. I also have two cats, one dog and one turtle. I like to play video games, read, and watch movies in my spare time.<p>
+   <p> Hello there, i’m Annika Little, I live in wisconsin. I write short stories in my spare time, like this book. I also have two cats, one dog and one turtle. I like to play video games and watch movies in my spare time.<p>
     <div id="footer"></div>
     </div>
   </body>
